# Distributed-computing-project

./: CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  README.md
cmake/: CompilerWarnings.cmake  FindBLAS.cmake  FindLAPACK.cmake  FindMPI.cmake  FindSQLite3.cmake  FindZMQ.cmake
docs/: CMakeLists.txt  DESIGN.md  INCLUDE_FILES.md  NETWORKING.md  RUNTIME.md  STORAGE.md
examples/: CMakeLists.txt  distributed_example.c  example_damped_oscil.f90  root_find.f90
examples/minimal_cluster/: CMakeLists.txt  runtime_example.c  storage_example.c
examples/parameter_sweep/: CMakeLists.txt
examples/volunteer_computing/: CMakeLists.txt  transport_example.c
fortran/: CMakeLists.txt
fortran/core/: constants.f90  kinds.f90  numeric_utils.f90  rng.f90
fortran/interface/: c_api.f90
fortran/kernels/linear_algebra/: dense_matrix.f90  eigen.f90
fortran/kernels/monte_carlo/: estimate_pi.f90
fortran/kernels/optimisation/: conjugate_newton.f90
fortran/kernels/root_find/: newton_rhapson.f90  secant.f90
fortran/models/: pi_experiment.f90
include/: errcodes.h  fortran_api.h  project.h  result.h  task.h  transport.h
src/: CMakeLists.txt
src/common/: errors.c  errors.h  log.c  log.h  time_utils.h
src/coordinator/: CMakeLists.txt  coordinator.c  coordinator.h  main.c  main_coordinator.c  scheduler.c  scheduler.h  worker_registry.c  worker_registry.h
src/net/: CMakeLists.txt  transport.c  transport.h  transport_mpi.c  transport_tcp.c  transport_zmq.c
src/runtime/: CMakeLists.txt  resource_limits.c  resource_limits.h  task_queue.c  task_queue.h
src/storage/: CMakeLists.txt  hdf5_index.c  hdf5_index.h  metadata.c  metadata.h
src/worker/: CMakeLists.txt  executor.c  executor.h  main.c  main_worker.c  worker.c  worker.h
tests/: CMakeLists.txt
tests/c/: CMakeLists.txt
tests/fortran/: CMakeLists.txt  test_core.f90
tests/integration/: CMakeLists.txt
tests/mocks/: CMakeLists.txt
tools/diagnostics/: net_test.c
tools/experimental/: run_pi.c
