# docs/CMakeLists.txt
# Documentation build configuration (optional)

# Placeholder for documentation generation configuration
# Could use Doxygen, Sphinx, or other documentation tools

# Example Doxygen configuration:
# find_package(Doxygen)
# if(DOXYGEN_FOUND)
#     add_custom_target(docs
#         COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile
#         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
#     )
# endif()

message(STATUS "Documentation: (build configuration pending)")
