# examples/parameter_sweep/CMakeLists.txt
# Parameter sweep example

# Placeholder for parameter sweep example sources
# This example demonstrates running multiple simulations with varying parameters

# If sources exist, they would be added here:
# add_executable(parameter_sweep_example parameter_sweep.f90)
# target_link_libraries(parameter_sweep_example PRIVATE fortran_core)

message(STATUS "Parameter sweep example: (sources pending)")
